--- a/k23cnt3day8/k23cnt3day8/src/main/resources/templates/layout/nav.html
+++ b/k23cnt3day8/k23cnt3day8/src/main/resources/templates/layout/nav.html
@@ -2,19 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <title>Navigation</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<!-- src/main/resources/templates/layout/nav.html -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4"
-     th:fragment="navFragment">
+<!-- Navigation Fragment -->
+<nav th:fragment="navFragment" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Library</a>
+        <a class="navbar-brand" th:href="@{/}">Book Management System</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav me-auto">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/books}">Books</a>
                 </li>
@@ -26,6 +27,6 @@
     </div>
 </nav>
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
